--- a/sass/style.css
+++ b/sass/style.css
@@ -1,3 +1,3 @@
-@use '_colors.scss' as clr;
-@use '_header.scss' as head;
-/*# sourceMappingURL=style.css.map */
+body {
+  background-color: #ea5a4a;
+}/*# sourceMappingURL=style.css.map */
