--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header{
 
 /* LOGIND FUNKTION GRID*/
 
-.container {  display: grid;
+.registre_container {  display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
     gap: 10px 10px;
@@ -118,10 +118,11 @@ header{
 
   .opretprofil { grid-area: opretprofil; }
 
+/* SLUT - LOGIND FUNKTION GRID*/
 
- /* STYLING AF OPRET PROFIL */
+ /* START - STYLING AF OPRET PROFIL */
 
-.container{
+.registre_container{
     height: 500px;
     padding-left: 150px;
     padding-right: 150px;
@@ -133,6 +134,9 @@ header{
     -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
     
 }
+
+/* SLUT - STYLING AF OPRET PROFIL */
+
 .opretprofil{
     text-align: center;
     margin-top: 25px;
