--- a/styles.css
+++ b/styles.css
@@ -320,7 +320,6 @@ header{
   }
   }
 
-
   
 /*Modal login*/
 .bg-modal{
@@ -495,3 +494,14 @@ header{
   }
   }
     
+
+/*login*/ 
+.form_container form .error-msg{
+    margin:10px 0;
+    display: block;
+    background: blue;
+    color: white;
+    border-radius: 5px;
+    font-size: 20px;
+
+}
