--- a/style.css
+++ b/style.css
@@ -39,7 +39,35 @@
 }
 
 
+/* opret form*/
 
+.form-div {
+ margin: 50px auto 50px;
+ padding: 25px 15px 10px 15px;
+ border:1px soild #80ced7;
+ border-radius: 5px;
+ font-size: 1.1rem;
+ 
+
+}
+
+.form-control-focus{
+    box-shadow: none;
+}
+
+form p{
+    font-size: .89rem;
+}
+
+
+.form-div.login{
+    margin: 100px;
+
+}
+
+.logout{
+    color: red;
+}
 
 
 
