--- a/style.css
+++ b/style.css
@@ -1,42 +1,3 @@
-* {
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-.container{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 20px;
-    padding-bottom: 60px;
-}
-.container .content{
-    text-align: center;
-}
-
-.container .content h1{
-    font-size: 50px;
-}
-
-.container .content p{
-    font-size: 25px;
-    margin-bottom:20px;
-}
-
-.container .content .btn{
-    display: inline-block;
-    padding: 10px 30px;
-    font-size: 20px;
-    margin:0 5px;
-    background-color: blueviolet;
-    color: white;
-    text-transform: capitalize;
-}
-.container .content .btn:hover{
-    background-color: crimson;
-}
 
 
 /* opret form*/
@@ -47,7 +8,6 @@
  border:1px soild #80ced7;
  border-radius: 5px;
  font-size: 1.1rem;
- 
 
 }
 
@@ -60,8 +20,9 @@ form p{
 }
 
 
-.form-div.login{
-    margin: 100px;
+.form-div .login{
+    margin-top: 100px;
+   
 
 }
 
