--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ input{
 
 
 
-
+/* 
 ul{
     list-style-type: none;
     display: block;
@@ -162,7 +162,7 @@ header{
 .hero_caption, h1, h3{
     text-align: center;
     color:aliceblue;
-}
+} */
 
 
 /*
@@ -331,7 +331,7 @@ header{
 
   
 /*Modal login*/
-.bg-modal{
+/* .bg-modal{
     height: 100%;
     width: 100%;
     position: absolute;
@@ -562,5 +562,5 @@ header{
 
 .profil_mail { grid-area: profil_mail; }
 
-.profil_opdater { grid-area: profil_opdater; }
+.profil_opdater { grid-area: profil_opdater; } */
 
