--- a/styles.css
+++ b/styles.css
@@ -562,5 +562,5 @@ header{
 
 .profil_mail { grid-area: profil_mail; }
 
-.profil_opdater { grid-area: profil_opdater; } */
+.profil_opdater { grid-area: profil_opdater; } 
 
