--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-/* LOGIND FUNKTION GRID*/
-
+/* START - LOGIND FUNKTION GRID*/
 .signup_container {  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -75,7 +74,6 @@
     box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
-    
 }
 
 .opretprofil{
@@ -100,18 +98,18 @@ input{
 
 .har-profil{
   text-align: center;
-
 }
 /* SLUT - STYLING AF OPRET PROFIL */
 
 
 
+/* START - STYLING AF FORSIDE */
 
-/* 
 ul{
     list-style-type: none;
     display: block;
 }
+
 li{
     list-style-type: none;
     
@@ -126,17 +124,15 @@ nav ul{
     justify-content: space-between;
     padding-left: 10px;
     padding-right: 10px;
-    
-
 }
 
-nav ul li{
+nav ul li a{
     margin-left: 5px;
     margin-right: 5px;
     margin-top: 20px;
 }
 
-nav ul li a, p{
+nav ul li a{
     display: block;
     color:aliceblue;
 }
@@ -159,10 +155,19 @@ header{
     height: 500px;
 }
 
-.hero_caption, h1, h3{
+.hero_caption, .hero_caption-2{
     text-align: center;
     color:aliceblue;
-} */
+} 
+.logind
+
+/* SLUT - STYLING AF FORSIDE */
+
+/* START - LOGIND FUNKTIONE */ 
+.register{
+  display: block;
+}
+/* SLUT - LOGING FUNKTION */ 
 
 
 /*
