--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 /* START - LOGIND FUNKTION GRID*/
-.signup_container {  display: grid;
+.signup_container {  
+  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 5px 5px;
   grid-auto-flow: row;
   grid-template-areas:
@@ -64,7 +65,7 @@
 /* START - STYLING AF OPRET PROFIL */
 .signup_container{
     height: 500px;
-    width: 1100px;
+    width: 1150px;
     margin-left: 50px;
     padding-left: 25px;
     padding-right: 25px;
@@ -153,7 +154,7 @@ nav ul li a{
 .login_icon{
    padding-top: 15px;
    margin-right: 100px;
-    height: 30px;
+  height: 30px;
 }
 .login_p{
     margin-left: 50px;
@@ -180,6 +181,13 @@ nav ul li a{
 }
 /* SLUT - STYLING AF FORSIDE */
 
+/* START - HEADER SIGNUP */
+.nav_bar-box{
+  background-color: #666565;
+  width: 100%;
+}
+/* SLUT - HEADER SIGNUP */ 
+
 
 /* START - LOGIND FUNKTIONE */ 
 .register{
@@ -187,7 +195,7 @@ nav ul li a{
 }
 /* SLUT - LOGING FUNKTION */ 
 
-  .modal-content{
+  /* .modal-content{
     width: 500px;
     height: 500px;
     border-radius: 4px;
@@ -345,15 +353,7 @@ nav ul li a{
     height: 550px;
     position: fixed;
     padding: 30px;
-  }
-}
-
-/* START - HEADER SIGNUP */
-.nav_bar-box{
-  background-color: #666565;
-}
-/* SLUT - HEADER SIGNUP */ 
-
+  } */
   
 /*Modal login*/
 /* .bg-modal{
