update af SoMe knapper

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
 
 .google { grid-area: google; }
 
-.facebook { grid-area: facebook; }
+#facebook { grid-area: facebook; }
 
 .fornavn { grid-area: fornavn; }
 
@@ -170,7 +170,7 @@ nav ul li a{
     color:aliceblue;
 } 
 
-#fb_btn {
+#facebook {
   background-color: #3B5998;
   color: white;
 }
