--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,8 @@ input{
 }
 
 
+
+
 /* SLUT - STYLING AF OPRET PROFIL */
 
 
@@ -173,11 +175,19 @@ nav ul li a{
 #fb_btn {
   background-color: #3B5998;
   color: white;
+  border-radius: 50px;
+  width: 200px;
+  height: 37px;
+  font-size: 14px;
 }
 #google{
   background-color: white;
   color: #222222;
-  border: solid 1px #222;
+  border: solid 1px rgb(97, 96, 96);
+  border-radius: 50px;
+  width: 200px;
+  height: 37px;
+  font-size: 14px;
 }
 /* SLUT - STYLING AF FORSIDE */
 
