--- a/styles.css
+++ b/styles.css
@@ -197,8 +197,8 @@ width: 100%;
 
 /* START - HEADER SIGNUP */
 .nav_bar-box{
-  background-color: #666565;
-  width: 100%;
+  background-color: #cacaca;
+  font-size: 15px;
 }
 /* SLUT - HEADER SIGNUP */ 
 
