--- a/styles.css
+++ b/styles.css
@@ -221,14 +221,18 @@ width: 100%;
 }
 /* SLUT - STYLING AF FORSIDE */
 
-main {
+.test {
   display: block;
   width: 100%;
   height: 100% !important;
+  display: flex;
+  align-items: center;
+  margin-left: 38%;
+  margin-top: -2.6%;
 }
 
 .trustpilot{
-  width: 30%;
+  width: 50%;
 }
 /* START - HEADER SIGNUP */
 .nav_bar-box{
