--- a/styles.css
+++ b/styles.css
@@ -170,26 +170,7 @@ nav ul li a{
     color:aliceblue;
 } 
 
-.hero_caption-2 a{
-  text-align: center;
-  color: #222;
-  text-decoration: none;
-  border: solid 0.5px aliceblue;
-  border-radius: 5px;
-  padding: 5px;
-  background-color:aliceblue
-}
 
-.nyhedsbrev_afmeld a{
-  text-align: center;
-  color: #222;
-  text-decoration: none;
-  border: solid 0.5px aliceblue;
-  border-radius: 5px;
-  padding: 5px;
-  background-color:aliceblue;
-  float: right;
-}
 
 #facebook {
   background-color: #3B5998;
@@ -214,10 +195,43 @@ nav ul li a{
 input{
 width: 100%;
 }
+/* nyhedsbrev style*/
 
-
-.nyhedsbrev{
+.nyhedsbrev_container{
+  background-color: #222;
   text-align: center;
+  height: 500px;
+    width: 1150px;
+    margin-left: 50px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+
+}
+
+.hero_caption-2 a{
+  text-align: center;
+  color: #222;
+  text-decoration: none;
+  border: solid 0.5px aliceblue;
+  border-radius: 5px;
+  padding: 5px;
+  background-color:aliceblue
+}
+
+.nyhedsbrev_afmeld a{
+  text-align: center;
+  color: #222;
+  text-decoration: none;
+  border: solid 0.5px aliceblue;
+  border-radius: 5px;
+  padding: 5px;
+  background-color:aliceblue;
+  float: right;
 }
 /* SLUT - STYLING AF FORSIDE */
 
