--- a/styles.css
+++ b/styles.css
@@ -93,9 +93,40 @@
   color: white;
 }
 
-input{
+.input{
   border-radius: 4px;
   border: 1px solid lightgrey;
+  
+}
+
+.input_efternavn input{
+  width: 400px;
+  margin-left: -200px;
+}
+
+.input_fornavn input{
+  width: 198px;
+  justify-content: flex-end;
+}
+
+.input_adresse input{
+  width: 610px;
+}
+
+.input_mobilnummer input{
+  width: 300px;
+}
+
+.input_brugernavn input{
+  height: 30px;
+}
+
+.input_kode input{
+  width: 192px;
+}
+
+.input_gentagkode input{
+  width: 200px;
 }
 
 .har-profil{
@@ -194,25 +225,7 @@ nav ul li a{
 }
 
 input{
-width: 100%;
-}
-/* nyhedsbrev style*/
-
-.nyhedsbrev_container{
-  color:aliceblue;
-  background-color: #13717A;
-  text-align: center;
-  height: 500px;
-    width: 1150px;
-    margin-left: 130px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 25px;
-    border-radius: 5px;
-    box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
-    -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
-    -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
-
+width: 200px;
 }
 
 .hero_caption-2 a{
@@ -261,7 +274,6 @@ width: 100%;
   
 
 }
-/* SLUT - STYLING AF FORSIDE */
 
 
 .test {
@@ -277,6 +289,27 @@ width: 100%;
 .trustpilot{
   width: 50%;
 }
+/* SLUT - STYLING AF FORSIDE */
+
+/* START - NYHEDSBREV STYLE */
+
+.nyhedsbrev_container{
+  color:aliceblue;
+  background-color: #13717A;
+  text-align: center;
+  height: 500px;
+    width: 1150px;
+    margin-left: 130px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+
+}
+/* SLUT - NYHEDSBREV STYLE */
 /* START - HEADER SIGNUP */
 .nav_bar-box{
   background-color: #cacaca;
