--- a/styles.css
+++ b/styles.css
@@ -183,8 +183,8 @@ nav ul li a{
 }
 
 .login_icon{
-    padding-top: 15px;
-    margin-right: 100px;
+    padding-top: 25px;
+    margin-right:50px;
     height: 30px;
 }
 
@@ -320,13 +320,23 @@ width: 200px;
 .buttonlogin{
   font: bold 11px Arial;
   text-decoration: none;
-  background-color: #EEEEEE;
+  text-align: center;
+  background-color: #ccc;
   color: #333333;
   padding: 2px 6px 2px 6px;
   border-top: 1px solid #CCCCCC;
   border-right: 1px solid #333333;
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
+  border-radius: 3px;
+  height: 13px;
+  margin-right: 30px;
+  margin-top: 30px;
+   
+}
+.kontakt-call-to-action-2{
+  display: flex;
+  justify-content: center;
 }
 /* START - LOGIND FUNKTIONE */ 
 .register{
