--- a/styles.css
+++ b/styles.css
@@ -202,6 +202,22 @@ nav ul li a{
     color:aliceblue;
 } 
 
+.buttonlogin{
+  font: bold 11px Arial;
+  text-decoration: none;
+  text-align: center;
+  background-color: #ccc;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+  border-radius: 3px;
+  height: 13px;
+  margin-right: 30px;
+  margin-top: 30px;   
+}
 
 
 #facebook {
@@ -289,6 +305,11 @@ width: 200px;
 .trustpilot{
   width: 50%;
 }
+
+.kontakt-call-to-action-2{
+  display: flex;
+  justify-content: center;
+}
 /* SLUT - STYLING AF FORSIDE */
 
 /* START - NYHEDSBREV STYLE */
@@ -310,6 +331,7 @@ width: 200px;
 
 }
 /* SLUT - NYHEDSBREV STYLE */
+
 /* START - HEADER SIGNUP */
 .nav_bar-box{
   background-color: #cacaca;
@@ -317,27 +339,7 @@ width: 200px;
 }
 /* SLUT - HEADER SIGNUP */ 
 
-.buttonlogin{
-  font: bold 11px Arial;
-  text-decoration: none;
-  text-align: center;
-  background-color: #ccc;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-  border-radius: 3px;
-  height: 13px;
-  margin-right: 30px;
-  margin-top: 30px;
-   
-}
-.kontakt-call-to-action-2{
-  display: flex;
-  justify-content: center;
-}
+
 /* START - LOGIND FUNKTIONE */ 
 .register{
   display: block;
@@ -345,7 +347,7 @@ width: 200px;
 /* SLUT - LOGING FUNKTION 
 
 
-/*login*/ 
+/* START - LOGIND */ 
 .form_container #login_form .error-msg{
     margin:10px 0;
     display: block;
@@ -353,10 +355,10 @@ width: 200px;
     color: white;
     border-radius: 5px;
     font-size: 20px;
-
 }
- */
-/* User Profil */
+/* SLUT - LOGIND */ 
+
+/* START - USER PROFIL*/
 
 .profil_container {  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -404,4 +406,6 @@ width: 200px;
 .profil_mail { grid-area: profil_mail; }
 
 .profil_opdater { grid-area: profil_opdater; } 
+/* SLUT -  USERPROFIL */ 
+
 
