--- a/styles.css
+++ b/styles.css
@@ -409,3 +409,20 @@ width: 200px;
 /* SLUT -  USERPROFIL */ 
 
 
+
+
+
+
+
+#dmenu{
+  display: flex;
+  width: 100%;
+  background-color: black;
+  }
+  #dmenu a{
+  box-sizing: border-box;
+  width:100%;
+  padding: 10px;
+  color: white !important;
+  text-align: center;
+  }
