--- a/styles.css
+++ b/styles.css
@@ -409,3 +409,31 @@ width: 200px;
 /* SLUT -  USERPROFIL */ 
 
 
+/* START - BOOKINGS */ 
+.bookings_container{
+  margin-top: 7%;
+  display: flex;  
+}
+
+.kommende_container{
+    margin-right: 10%;
+    margin-left: 15%;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+    -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+}
+
+.tidligere_container{
+  margin-right: 15%;
+  margin-right: 10%;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+
+}
