update af profil
tilføjesle af bilelde og opdaterknap

--- a/styles.css
+++ b/styles.css
@@ -391,7 +391,9 @@ width: 200px;
 
 .profil_title_2 { grid-area: profil_title_2; }
 
-.profil_billede { grid-area: profil_billede; }
+.profil_billede { grid-area: profil_billede;
+
+}
 
 .profil_retbillede { grid-area: profil_retbillede; }
 
@@ -408,6 +410,12 @@ width: 200px;
 .profil_opdater { grid-area: profil_opdater; } 
 /* SLUT -  USERPROFIL */ 
 
+
+
+.profil_billede img{
+  width: 100px;
+  height: 100px;
+}
 
 /* START - BOOKINGS */ 
 .bookings_container{
