--- a/styles.css
+++ b/styles.css
@@ -446,11 +446,12 @@ width: 200px;
   background-color: black;
 
   justify-content: flex-end;
+  flex-direction: row;
   position: relative;
   margin-bottom: 1rem;
   top: 0;
   }
-  
+
   #dmenu a{
   box-sizing: border-box;
   width:100%;
