--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@
     ". . fodselsdag ."
     ". . mobilnummer ."
     ". logind-oplysninger . ."
-    ". . input_brugernavn ."
+    ". . form-group ."
     ". . email ."
     ". . kodeord ."
     ". . gentagkode ."
@@ -33,7 +33,7 @@
     ". . nyhedsbrev ."
     ". . opret ."
     ". . . ."
-    ". . har-profil ."
+    ". .  har-profil ."
     ". . . .";
 }
 
@@ -65,7 +65,8 @@
 
 .logind-oplysninger { grid-area: logind-oplysninger; }
 
-.input_brugernavn { grid-area: input_brugernavn; }
+.form-group { grid-area: form-group; }
+
 
 .email { grid-area: email; }
 
@@ -208,7 +209,7 @@
 
 .input_brugernavn input{
   height: 30px;
-}
+} 
 
 .input_kode input{
   width: 192px;
