--- a/styles.css
+++ b/styles.css
@@ -103,6 +103,19 @@
 
 .har-profil { grid-area: har-profil; }
 
+.signup_container{
+  max-width: 90%;
+  max-height: 100%;
+  margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+}
+
 /* Mobil grid slut*/
 
 @media screen and (min-width: 600px){
