--- a/styles.css
+++ b/styles.css
@@ -294,9 +294,9 @@ nav ul li a{
 }
 
 .login_icon{
-    padding-top: 25px;
-    margin-right:50px;
-    height: 30px;
+    width: 50%;
+    margin-top: 8%;
+  
 }
 
 .login_p{
@@ -845,8 +845,9 @@ width: 200px;
   /* SLUT - SIDEBAR */ 
 
 /* SLUT - PROFILINFO */ 
-  .profil_info{
+  #profil_info{
     color: var(--clr--c2a);
+    justify-content: center;
     
   }
    /* SLUT - PROFILINFO */ 
