--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,99 @@
 /* START - LOGIND FUNKTION GRID*/
 
 /*Mobil grid*/
+.signup_container {
+      
+  display: grid;
+  justify-content: start;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  gap: 1em;
+  grid-auto-flow: row;
+  grid-template-areas:
+    ". . . ."
+    ". . opretprofil ."
+    ". . google ."
+    ". . facebook ."
+    ". person-oplysninger . ."
+    ". . fornavn ."
+    ". . efternavn ."
+    ". . etage ."
+    ". . adresse ."
+    ". . postnummer ."
+    ". . by ."
+    ". . kon ."
+    ". . fodselsdag ."
+    ". . mobilnummer ."
+    ". logind-oplysninger . ."
+    ". . form-group ."
+    ". . email ."
+    ". . kodeord ."
+    ". . gentagkode ."
+    ". . vilkar ."
+    ". . nyhedsbrev ."
+    ". . opret ."
+    ". . . ."
+    ". .  har-profil ."
+    ". . . .";
+}
+
+.opretprofil { grid-area: opretprofil; }
+
+.google { grid-area: google; }
+
+.facebook { grid-area: facebook; }
+
+.person-oplysninger { grid-area: person-oplysninger; }
+
+.fornavn { grid-area: fornavn; }
+
+.efternavn { grid-area: efternavn; }
+
+.etage { grid-area: etage; }
+
+.adresse  { grid-area: adresse;  }
+
+.postnummer { grid-area: postnummer; }
+
+.by { grid-area: by; }
+
+.kon { grid-area: kon; }
+
+.fodselsdag { grid-area: fodselsdag; }
+
+.mobilnummer { grid-area: mobilnummer; }
+
+.logind-oplysninger { grid-area: logind-oplysninger; }
+
+.form-group { grid-area: form-group; }
+
+
+.email { grid-area: email; }
+
+.kodeord { grid-area: kodeord; }
+
+.gentagkode { grid-area: gentagkode; }
+
+.vilkar { grid-area: vilkar; }
+
+.nyhedsbrev { grid-area: nyhedsbrev; }
+
+.opret { grid-area: opret;  }
+
+.har-profil { grid-area: har-profil; }
+
+.signup_container{
+  max-width: 90%;
+  max-height: 100%;
+  margin: 0 auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+}
 
 /* Mobil grid slut*/
 
