--- a/styles.css
+++ b/styles.css
@@ -295,8 +295,11 @@ nav ul li a{
 
 .login_icon{
     width: 50%;
-    margin-top: 8%;
-  
+    margin-top: 2%;
+}
+.login_txt-icon{
+  display: flex;
+  justify-content: flex-end;
 }
 
 .login_p{
