--- a/styles.css
+++ b/styles.css
@@ -503,11 +503,28 @@ font-weight: var(--fw-reg);
 .form_container #login_form .error-msg{
     margin:10px 0;
     display: block;
-    background: blue;
+    background: var(--clr--logo);
     color: var(--clr--background);
     border-radius: 5px;
     font-size: 20px;
 }
+
+.container{
+  width: 45%;
+  height: 100%;
+  margin-top: 3%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+}
+
+.container input{
+width: 130%;
+}
+
 /* SLUT - LOGIND */
 
 /* START - USER PROFIL*/
