--- a/styles.css
+++ b/styles.css
@@ -409,6 +409,27 @@ height: 30px;
   float: right;
 }
 
+.nyhedsbrev_afmeld-out{
+  margin-left: 25%;
+  margin-top: 5%;
+  padding: 5%;
+  width: 50%;
+  height: 300%;
+  border-radius: 5px;
+  box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+}
+.nyhedsbrev_btn-afmeld{
+  background-color: var(--clr--c2a);
+  color: var(--clr--background);
+  border-radius: 8px;
+  padding: 1px;
+  width: 15%;
+  border: none;
+}
+
+
 .newsletter__title{
   color:aliceblue;
 
