--- a/styles.css
+++ b/styles.css
@@ -420,12 +420,16 @@ height: 30px;
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
 }
+
 .nyhedsbrev_btn-afmeld{
   background-color: var(--clr--c2a);
   color: var(--clr--background);
   border-radius: 8px;
   padding: 1px;
-  width: 15%;
+  width: 30%;
+  height: 20%;
+  font-weight: var(--fw-reg);
+  font-size: 14px;
   border: none;
 }
 
