--- a/styles.css
+++ b/styles.css
@@ -293,18 +293,15 @@ nav ul{
 }
 
 nav ul li a{
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 32px;
-}
-
-nav ul li a{
-    display: block;
+    margin-top: 35px;
+    display: flex;
+    justify-content: center;
     color: var(--clr--background);
 }
 
 .logo{
-    width: 80px;
+    margin-top: 1%;
+    width: 35%;
 }
 
 .login_icon{
