--- a/styles.css
+++ b/styles.css
@@ -308,8 +308,9 @@ nav ul li a{
 }
 
 .login_icon{
-    width: 50%;
+    width: 30%;
     margin-top: 2%;
+    margin-right: 10%;
 }
 .login_txt-icon{
   display: flex;
@@ -335,8 +336,7 @@ nav ul li a{
   font-weight: var(--fs-nav);
   text-decoration: none;
   text-align: center;
-  background-color: #ccc;
-  color: #333333;
+  color: var(--clr--background);
   padding: 2px 6px 2px 6px;
   border-top: 1px solid #CCCCCC;
   border-right: 1px solid #333333;
@@ -346,6 +346,7 @@ nav ul li a{
   height: 13px;
   margin-right: 30px;
   margin-top: 30px;
+  border-style: none;
 }
 
 
