--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,7 @@ nav ul li a{
 
 .login_icon{
     width: 30%;
-    margin-top: 2%;
+    margin-bottom: 10%;
     margin-right: 10%;
 }
 .login_txt-icon{
