--- a/styles.css
+++ b/styles.css
@@ -396,9 +396,14 @@ width: 170px;
 height: 30px;
 }
 
-.nyhedsbrev_afmeld a{
+.nyhedsbrev_afmeld{
   text-align: center;
-  color: var(--clr--background);
+  text-decoration: none;
+  margin-top: 1%;
+}
+
+.nyhedsbrev_afmeld a{
+  color: var(--clr--c2a);
   text-decoration: none;
   border: solid 0.5px aliceblue;
   border-radius: 5px;
@@ -494,18 +499,23 @@ height: 30px;
 /* START - NYHEDSBREV STYLE */
 .nyhedsbrev_container{
   background-color:var(--clr--background);
-  color: var(--clr--logo);
+  color: var(--clr--txt);
   text-align: center;
-  height: 500px;
-  width: 1150px;
-  margin-left: 130px;
+  height: 50%;
+  width: 50%;
+  margin-top: 5%;
   padding-left: 25px;
   padding-right: 25px;
+  padding-top: 2%;
   padding-bottom: 25px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
 }
 
 .nyhedsbrev_body{
