--- a/styles.css
+++ b/styles.css
@@ -460,12 +460,13 @@ height: 30px;
   top: 20px;
   width:100px;
   height: 30px;
-  background: aliceblue;
-  color: #222;
+  background-color: var(--clr--logo);
+  color: var(--clr--background);
   font-size: 20px;
   font-weight: 600;
   text-align: center;
   border-radius: 5px;
+  border-style: none;
 
 
 }
