--- a/styles.css
+++ b/styles.css
@@ -458,14 +458,14 @@ height: 30px;
   cursor: pointer;
   right: 20px;
   top: 20px;
-  width:100px;
-  height: 30px;
+  width: 20%;
+  height: 10%;
   background-color: var(--clr--logo);
   color: var(--clr--background);
-  font-size: 20px;
+  font-size: var(--fw-reg)
   font-weight: 300;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 8px;
   border-style: none;
 
 
