--- a/styles.css
+++ b/styles.css
@@ -716,21 +716,25 @@ width: 130%;
 }
 
 .kommende_container{
+    margin-top: -20%;
     margin-right: 10%;
     margin-left: 15%;
     padding-left: 10px;
     padding-right: 10px;
     border-radius: 10px;
+    padding: 2%;
     box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
     -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
     -moz-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
 }
 
 .tidligere_container{
+  margin-top: -20%;
   margin-right: 15%;
   margin-right: 10%;
   padding-left: 10px;
   padding-right: 10px;
+  padding: 2%;
   border-radius: 10px;
   box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
   -webkit-box-shadow: 0px 0px 5px 2px rgba(136,129,129,0.75);
