--- a/styles.css
+++ b/styles.css
@@ -380,6 +380,12 @@ nav ul li a{
       left: 0;
 
   }
+  .burger_menu{
+    z-index: 500 !important;
+    position: relative;
+  }
+
+
 }
 /*SLUT MENU*/
 
@@ -590,13 +596,13 @@ height: 30px;
 }
 
 .trustpilot_stjerner {
-  display: block;
   width: 100%;
   height: 100% !important;
   display: flex;
   align-items: center;
   margin-left: 38%;
   margin-top: 3%;
+  
 }
 
 .trustpilot{
