--- a/styles.css
+++ b/styles.css
@@ -380,7 +380,7 @@ nav ul li a{
       left: 0;
 
   }
-  .burger_menu{
+  #burger_menu{
     z-index: 500 !important;
     position: relative;
   }
