--- a/styles.css
+++ b/styles.css
@@ -697,18 +697,18 @@ margin-top: 30%;
 
 /* START - USER PROFIL*/
 .profil_container {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1.1fr 0.5fr 0.5fr 1.1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   gap: 0px 0%;
   grid-auto-flow: row;
   grid-template-areas:
     "profil_menu profil_menu profil_menu profil_menu"
-    "profil_sidebar profil_titel profil_titel profil_titel"
-    "profil_sidebar . profil_billede ."
-    "profil_sidebar profil_navn profil_efternavn profil_efternavn"
+    "profil_sidebar profil_titel profil_titel ."
+    "profil_sidebar profil_billede profil_billede ."
+    "profil_sidebar profil_navn profil_efternavn ."
     "profil_sidebar profil_adresse profil_adresse ."
     "profil_sidebar profil_tlfnr profil_email ."
-    "profil_sidebar . opdater ."
+    "profil_sidebar opdater opdater ."
     "profil_sidebar . . ."
     "profil_footer profil_footer profil_footer profil_footer";
 }
@@ -717,23 +717,24 @@ margin-top: 30%;
 
 .profil_menu { grid-area: profil_menu; }
 
-.profil_billede { grid-area: profil_billede; }
-
-.profil_titel { grid-area: profil_titel; }
-
 .profil_navn { grid-area: profil_navn; }
-
-.profil_efternavn { grid-area: profil_efternavn; }
 
 .profil_adresse { grid-area: profil_adresse; }
 
 .profil_tlfnr { grid-area: profil_tlfnr; }
 
+.profil_footer { grid-area: profil_footer; }
+
+.profil_titel { grid-area: profil_titel; }
+
+.profil_billede { grid-area: profil_billede; }
+
+.profil_efternavn { grid-area: profil_efternavn; }
+
 .profil_email { grid-area: profil_email; }
 
 .opdater { grid-area: opdater; }
 
-.profil_footer { grid-area: profil_footer; }
 
 .profil_container{
   text-align: center;
@@ -757,62 +758,11 @@ margin-top: 30%;
   margin-top: 5%;
 }
 
-/* .profil_container {  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "profil_menu profil_menu profil_title profil_title profil_title profil_title profil_title profil_title profil_logud"
-    "profil_menu profil_menu . . . profil_title_2 . . ."
-    "profil_menu profil_menu . . . profil_billede . . ."
-    "profil_menu profil_menu . . . profil_retbillede . . ."
-    "profil_menu profil_menu . . profil_oplysninger profil_oplysninger profil_oplysninger . ."
-    "profil_menu profil_menu . . profil_navn profil_navn profil_navn . ."
-    "profil_menu profil_menu . . profil_adresse profil_adresse profil_adresse . ."
-    "profil_menu profil_menu . . profil_telefon profil_telefon profil_telefon . ."
-    "profil_menu profil_menu . . profil_mail profil_mail profil_mail . ."
-    "profil_menu profil_menu . . . profil_opdater . . .";
-}
-
-.profil_menu { grid-area: profil_menu;
-  background-color: #ea5a4a;
-}
-
-.profil_title { grid-area: profil_title;
-  background-color: #ea224a; }
-
-.profil_logud { grid-area: profil_logud;
-  background-color: #893143;
-}
-
-.profil_title_2 { grid-area: profil_title_2; }
-
-.profil_billede { grid-area: profil_billede;
-
-}
-
-.profil_retbillede { grid-area: profil_retbillede; }
-
-.profil_oplysninger { grid-area: profil_oplysninger; }
-
-.profil_navn { grid-area: profil_navn; }
-
-.profil_adresse { grid-area: profil_adresse; }
-
-.profil_telefon { grid-area: profil_telefon; }
-
-.profil_mail { grid-area: profil_mail; }
-
-.profil_opdater { grid-area: profil_opdater; } */
-/* SLUT -  USERPROFIL */
-
-
-
 .profil_billede img{
   width: 80%;
   height: 100px;
 }
+/* SLUT - BRUGERPROFIL */
 
 /* START - BOOKINGS */
 .bookings_container{
