--- a/styles.css
+++ b/styles.css
@@ -760,6 +760,8 @@ margin-top: 30%;
 .profil_billede img{
   width: 80%;
   height: 100px;
+  margin-bottom: 10%;
+  margin-top: 10%;
 }
 /* SLUT - BRUGERPROFIL */
 
