--- a/styles.css
+++ b/styles.css
@@ -333,13 +333,13 @@ nav ul li a{
 #check{
   display: none;
 }
-@media (max-width:952px){
+@media (max-width:960px){
   nav ul li a{
       font-size: 16px;
   }
 
 }
-@media (max-width:858px){
+@media (max-width:900px){
   .checkbtn{
      display: block;
      z-index: 999;
@@ -432,12 +432,18 @@ nav ul li a{
 .hero_caption, .hero_caption-2 {
     text-align: center;
     color: var(--clr--background);
-  
-
 }
 
 .hero_caption-2 {
   font-weight: 300;
+  font-size: 20px;
+}
+@media (max-width:500px){
+  .hero_caption-2 {
+    font-weight: 300;
+    font-size: 20px;
+    padding-top:40px;
+  }
 }
 
 .buttonlogin{
@@ -589,6 +595,14 @@ height: 30px;
 
 }
 
+@media (max-width:600px){
+  .hero_caption{
+    margin-top: 5%;
+    font-size: 25px;
+    padding-top: 30px;
+    }
+}
+
 /*START - TRUSTPILOT*/
 
 .trustpilot_txt{
@@ -596,23 +610,29 @@ height: 30px;
 }
 
 .trustpilot_stjerner {
-  width: 60%;
-  height: 100% !important;
   display: flex;
-  align-items: center;
-  margin-left: 38%;
-  margin-top: 3%;
-  
-}
-
-.trustpilot{
-  width: 43%;
+  justify-content: center;
+  margin-top: 20%;
 }
 
 .kontakt-call-to-action-2{
   display: flex;
   justify-content: center;
 }
+
+.one p{
+  font-size: 25px;
+  text-align: center;
+}
+
+@media (max-width:400px){
+  .trustpilot_stjerner {
+    display: flex;
+    justify-content: center;
+    margin-top: 45%;
+  }
+}
+
 /* SLUT - STYLING AF FORSIDE */
 
 /* START - NYHEDSBREV STYLE */
@@ -1159,8 +1179,14 @@ margin-top: 30%;
   background-color: var(--clr--footer);
   margin-bottom: 0%;
   padding: 5%;
-  margin-top: 20%;
+  margin-top: 30%;
   text-decoration: none;
+}
+
+@media (max-width:700px){
+  #footer{
+    margin-top: 35%;
+  }
 }
 
 /* SLUT - FOOTER */
